Stable versions
---------------

4.1.0 ():
	- Requires libxmp 4.4
	- Add option to force tracker emulation
	- Add option to enable classic sound mixers
	- Fix default amplification factor
	- Remove option --offset-bug-emulation

4.0.11 (20160306):
	- Mark surround channels in channel list
	- Address errors reported by Coverity Scan

4.0.10 (20141030):
	- Add AIFF file output driver (by Lorence Lombardo)
	- Add command 'h' to display help message (by Eugene Toder)
	- Fix sound driver deinitialization on signal (by Eugene Toder)
	- Adjust CoreAudio driver latency
	- Fix missing --all-sequences in help message

4.0.9 (20140926):
	- Add option '-p' to set the default pan amplitude
	- Add parameter 'default_pan' to configuration file
	- Fix library detection when cross-compiling
	- Fix Visual Studio 2013 build (by Stephen Leary)
	- Default pan amplitude set to 50%

4.0.8 (20140714):
	- Add command 'c' to display module comment
	- Add command-line option -C to display module comment
	- Fix ignored amplify option (by Dennis Lindroos)
	- Fix Win64 compatibility (by Ozkan Sezer)
	- Fix configuration file location in Windows (by Ozkan Sezer)
	- Fix screen corruption with large number of rows

4.0.7 (20140224):
	- Fix NetBSD sound driver (by shattered)
	- Fix Haiku sound driver
	- Fix info message display time
	- Start instrument numbering at 1
	- Minor cosmetic fixes

4.0.6 (20130519):
	- Fix error when g++ is absent on non-BeOS (by Jan Engelhardt)
	- Portability fixes to build with Visual C++

4.0.5 (20130512):
	- Change buildsystem to use automake (by Jan Engelhardt)
	- Fix loop when skipping to first file and it's not playable

4.0.4 (20130428):
	- Fix executable suffix in MinGW32
	- Fix frame info display in Windows (reported by vaseleos0)
	- Fix build issues with Solaris Studio

4.0.3 (20130421):
	- Fix native-endian coreaudio output (reported by Misty De Meo)
	- Fix MinGW32 build (reported by vaseleos0)
	- Fix Cygwin build (reported by Benjamin Shadwick)