@@ -5,11 +5,12 @@
 # Format is:
 #
 # [MD5sum]
-# 8bit = yes/no                 Convert 16 bit samples to 8 bit
 # amplify = <0|1|2|3>           Amplification factor (default is 1)
+# classic = yes/no		Enable classic mixer if available
 # filter = yes/no               Enable filters (affects IT only)
 # fixloop = yes/no              Use sample loop start value / 2
 # interpolation = <method>      Software mixer interpolation
+# loop = yes/no			Loop module
 # mode = <player mode>          Force tracker emulation
 # mono = yes/no                 Mono output
 # mix = value                   Stereo channel separation (0 - 100)
