@@ -146,8 +146,8 @@ verbosity level will be increased (no messages will be displayed
 when the player runs in background)\&.
 .IP "\fB\-x, \-\-classic\fP" 
 Use classic sound mixers\&, if available for the format being played\&.
-For Amiga formats such as Protracker, classic mode simulates the sound
-of an Amiga 500\&, with or without the led filter\&.
+For Amiga formats such as Protracker, the classic mode mixer models the
+sound of an Amiga 500\&, with or without the led filter\&.
 .IP "\fB\-Z, \-\-all\-sequences\fP" 
 Play all hidden or alternative pattern sequences (subsongs) in module\&.
 .IP "\fB\-z, \-\-sequence\fP \fInum\fP" 
