@@ -72,6 +72,13 @@
 #
 #amplify = 1
 
+# classic = <yesno>
+# Enable classic mixer if available. For Amiga 4-channel modules, the
+# classic mixer is modeled after an Amiga 500 with led filter option.
+# Default is disabled.
+#
+#classic = no
+
 # srate = <val>
 # Sampling rate in hertz. Default is 44100 Hz.
 #
@@ -135,6 +142,7 @@
 #mix = 70
 
 # default_pan = <val>
-# Default pan setting for 4-channel Amiga modules. Default is 50%
+# Default pan setting for modules with L/R channels. Default is 50%
+# (does not affect the Amiga classic mixer)
 #
 #default_pan = 50
