@@ -6,6 +6,7 @@ Stable versions
 	- Add option to force tracker emulation
 	- Add option to enable classic sound mixers
 	- Fix default amplification factor
+	- Fix module-specific configuration file options
 	- Remove option --offset-bug-emulation
 
 4.0.11 (20160306):
